# mockito-3-bazel-example

./: README.md  WORKSPACE.bazel
app/: BUILD.bazel
app/src/androidTest/java/com/test/myapplication/: AndroidManifest.xml  BUILD.bazel  ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/test/myapplication/: AndroidManifest.xml  BUILD.bazel  MainActivity.java
app/src/main/java/com/test/myapplication/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
