load("@rules_android//android:rules.bzl", "android_binary")

android_binary(
    name = "app",
    custom_package = "com.test.myapplication",
    manifest = "src/main/AndroidManifest.xml",
    multidex = "native",
    resource_files = glob(["src/main/res/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//app/src/main/java/com/test/myapplication:activity",
    ],
)
